# a-line-of-potatoes

./: CMakeLists.txt  README.md  counts-problem-4.csv  install.sh  processing.py  tmp.py
docs/: functions.md  structs.md
inc/: tri-diag-matrix.cpp  tri-diag-matrix.h
src/: CMakeLists.txt  csr-matrix.cpp  csr-matrix.h  dense-matrix.cpp  dense-matrix.h  tri-diag-matrix.cpp  tri-diag-matrix.h  vector-operations.h
test/: CMakeLists.txt  test-csr-iter-time.cpp  test-csr-time.cpp  test-csr.cpp  test-dense-time.cpp  test-dense.cpp  test-tridiag.cpp  test-vector-operations.cpp
test/src/: main.cpp
timestamps/: csr-dense.csv
timestamps-csr-vs-dense/: csr-sparse.csv  dense-dense.csv  dense-sparse.csv
timestamps-iter-convergence-compare/: data.csv  processing.py
timestamps-iter-problem2/: .~lock.data.csv#  data.csv  processing.py
